# django-layout

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  .prettierrc.toml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  compose.yaml  docker-compose.yml  fabfile.py  manage.py  package-lock.json  package.json  pip-compile.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements.pip  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  renovate_global_config.json
.github/workflows/: main.yml  pre-commit.yml  renovate-lockfile.yml  renovate.yml  upgrade-deps.yml
client/: package-lock.json  package.json
docker/app/: Dockerfile
docker/prettier/: Dockerfile  package-lock.json  package.json
docs/: conf.py  environments.rst  index.rst  install.rst
project_name/: config.py  settings.py  urls.py  wsgi.py
project_name/conf/: dev.py  test.py
project_name/conf/dev/: __init__.py
project_name/conf/local/example/: __init__.py  urls.py
project_name/conf/test/: __init__.py  urls.py
project_name/settings/: base.py  dev.py  local.py.example
project_name/templates/: 404.html  500.html  base.html  index.html
project_name/wsgi/: dev.py  local.py  test.py
requirements/: base.txt  dev.in  dev.txt  prod.txt  requirements.in
tests/: test_error_pages.py  test_index.py  test_logging.py
tests/admin/: test_login.py
tests/server/: conftest.py  test_basic_auth.py  test_production.py  test_server.py
ui/: main.css
