[dependency-groups]
cog = [
  "cogapp>=3.6.0",
  "goodconf[yaml]>=6.1.2",
]
dev = [
  "django-stubs>=5.2.7",
  "mypy>=1.18.2",
  "readable-log-formatter>=0.1.4",
]

[project]
dependencies = [
  "dj-database-url>=3.0.1",
  "django-alive>=2.0.0",
  "django-csp>=4.0",
  "django>=5.2.8",
  "goodconf[yaml]>=6.1.2",
  "gunicorn>=23.0.0",
  "psycopg>=3.2.12",
  "python-json-logger>=4",
  "sentry-sdk>=2.44.0",
  "whitenoise>=6.11.0",
  "wsgi-basic-auth>=1.1.0",
]
name = "django-layout"
requires-python = "==3.14.0"
version = "4.0"

[tool.django-stubs]
django_settings_module = "{{ project_name }}.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py314"

[tool.ruff.lint]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`"
  "ARG001",  # Unused function argument (request, ...)
  "ARG002",  # Unused method argument (*args, **kwargs)
  "D",  # Missing or badly formatted docstrings
  "E501",  # Let the formatter handle long lines
  "FBT",  # Flake Boolean Trap (don't use arg=True in functions)
  "RUF012",  # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243
  "COM812",  # (ruff format) Checks for the absence of trailing commas
  "ISC001",  # (ruff format) Checks for implicitly concatenated strings on a single line
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"test_*.py" = [
  "S101",  # S101 Use of `assert` detected
  "PLR2004",  # Magic value used in comparison,
]
