[dependency-groups]
cog = [
  "cogapp>=3.6.0",
  "goodconf[yaml]>=6.1.2",
]
dev = [
  "django-coverage-plugin>=3.2.0",
  "django-stubs>=5.2.8",
  "mypy>=1.19.0",
  "pytest-cov>=7.0.0",
  "pytest-django>=4.11.1",
  "pytest-env>=1.2.0",
  "pytest-socket>=0.7.0",
  "pytest-xdist>=3.8.0",
  "pytest>=9.0.1",
  "readable-log-formatter>=0.1.4",
]

[project]
dependencies = [
  "dj-database-url>=3.0.1",
  "django-alive>=2.0.0",
  "django==6",
  "goodconf[yaml]>=6.1.2",
  "gunicorn>=23.0.0",
  "psycopg>=3.3.2",
  "python-json-logger>=4",
  "sentry-sdk>=2.47.0",
  "whitenoise>=6.11.0",
  "wsgi-basic-auth>=1.1.0",
]
name = "django-layout"
requires-python = "==3.14.1"
version = "4.0"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
skip_covered = true

[tool.coverage.run]
branch = true
core = "ctrace"
disable_warnings = [
  "module-not-imported",
  "module-not-measured",
  "no-data-collected",
]
omit = [
  "**/node_modules/*",
  ".venv/*",
  "client/*",
  "dist/*",
  "*.egg-info/*",
]
patch = ["subprocess"]
plugins = [
  'django_coverage_plugin',
]

[tool.django-stubs]
django_settings_module = "{{ project_name }}.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
addopts = [
  "--allow-hosts=127.0.0.1,localhost",
  "--allow-unix-socket",  # Allow async
  "--disable-socket",  # Prevent network calls.
  "--ds={{ project_name }}.settings",
  "--fail-on-template-vars",  # Yell at invalid variables in templates
  "--reuse-db",  # Reuse by default. Use --create-db to recreate test dbs.
  "--strict-markers",
]

[tool.pytest_env]
DEBUG = 0
TEMPLATE_DEBUG = 1

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py314"

[tool.ruff.lint]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "ARG001",  # Unused function argument (request, ...)
  "ARG002",  # Unused method argument (*args, **kwargs)
  "COM812",  # Check absence of trailing commas. Made redundant by formatter.
  "D",  # Missing or badly formatted docstrings
  "FBT",  # Flake Boolean Trap (don't use arg=True in functions)
  "PLR2004",  # Allow "magic values" (e.g. status_code == 302)
  "RUF012",  # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*" = [
  "E501",  # Allow exceeded line length in migrations.
]
"**/tests/**/*" = [
  "PLR2004",  # Magic value used in comparison
  "S101",  # Allow use of asserts
]
